# airflow-docker

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  airflow.cfg  compose.yml  pyproject.toml  requirements.txt
config/: airflow.cfg  webserver_config.py
dags/: example.py
