[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["eltbus <33374178+eltbus@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
httpx = "^0.27.2"
minio = "^7.2.8"
apache-airflow = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
